[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ui/EscapeMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/interface/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/ui/CheatMenuPin.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160.386, 49.2408 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96.1012, 540.141 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 81.8971
height = 131.467

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 261.367, 106.742 )

[node name="EscapeMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.101961, 0.101961, 0.101961, 0.223529 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="VBoxContainer" parent="CenterContainer"]
pause_mode = 2
margin_left = 901.0
margin_top = 447.0
margin_right = 1019.0
margin_bottom = 632.0
custom_constants/separation = 15

[node name="Resume" parent="CenterContainer/ItemList" instance=ExtResource( 2 )]
margin_right = 118.0
text = "Resume"

[node name="Save game" parent="CenterContainer/ItemList" instance=ExtResource( 2 )]
margin_top = 40.0
margin_right = 118.0
margin_bottom = 65.0
text = "Save game"

[node name="Load game" parent="CenterContainer/ItemList" instance=ExtResource( 2 )]
margin_top = 80.0
margin_right = 118.0
margin_bottom = 105.0
text = "Load game"

[node name="Options" parent="CenterContainer/ItemList" instance=ExtResource( 2 )]
margin_top = 120.0
margin_right = 118.0
margin_bottom = 145.0
disabled = true
text = "Options"

[node name="Exit" parent="CenterContainer/ItemList" instance=ExtResource( 2 )]
margin_top = 160.0
margin_right = 118.0
margin_bottom = 185.0
text = "Exit"

[node name="CheatMenuEnabler" type="Node2D" parent="."]
z_index = 1000
z_as_relative = false

[node name="PinBorder" type="StaticBody2D" parent="CheatMenuEnabler"]
position = Vector2( 1762.15, 43.6616 )
input_pickable = true
collision_layer = 262144
collision_mask = 262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheatMenuEnabler/PinBorder"]
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CheatMenuEnabler/PinBorder"]
position = Vector2( 1.948, 981.8 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CheatMenuEnabler/PinBorder"]
position = Vector2( 255.19, 492.848 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CheatMenuEnabler/PinBorder"]
position = Vector2( -253.242, 492.848 )
shape = SubResource( 2 )

[node name="Pin" type="KinematicBody2D" parent="CheatMenuEnabler"]
position = Vector2( 1761.79, 185.452 )
input_pickable = true
collision_layer = 393216
collision_mask = 262144
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheatMenuEnabler/Pin"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="CheatMenuSwitch" type="Area2D" parent="CheatMenuEnabler"]
position = Vector2( 1764.88, 989.077 )
input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 128.0
monitorable = false
collision_layer = 0
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheatMenuEnabler/CheatMenuSwitch"]
shape = SubResource( 4 )
[connection signal="mouse_entered" from="." to="." method="_on_EscapeMenu_mouse_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_EscapeMenu_visibility_changed"]
[connection signal="pressed" from="CenterContainer/ItemList/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/ItemList/Save game" to="." method="_on_Save_game_pressed"]
[connection signal="pressed" from="CenterContainer/ItemList/Load game" to="." method="_on_Load_game_pressed"]
[connection signal="pressed" from="CenterContainer/ItemList/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/ItemList/Exit" to="." method="_on_Exit_pressed"]
[connection signal="mouse_entered" from="CheatMenuEnabler/PinBorder" to="." method="_on_PinBorder_mouse_entered"]
[connection signal="mouse_exited" from="CheatMenuEnabler/Pin" to="CheatMenuEnabler/Pin" method="_on_Pin_mouse_exited"]
[connection signal="body_entered" from="CheatMenuEnabler/CheatMenuSwitch" to="." method="_on_CheatMenuSwitch_body_entered"]
